# casparLinux

./: README.md
common/: Makefile~  common.txt  configure.ac  env.cpp~  out.txt  scope_exit.h  stdafx.h
common/concurrency/: com_context.h  executor.h  lock.h  thread_info.cpp  thread_info.h
common/diagnostics/: graph.cpp
common/exception/: exceptions.h  win32_exception.cpp  win32_exception.h
common/exception-bk/: exceptions.h  win32_exception.h~
common/filesystem/: polling_filesystem_monitor.cpp
common/gl/: gl_check.cpp
common/log/: cmd.txt  log.cpp  log.h  out.txt
common/memory/: endian.h  memclr.h  memshfl.h
common/os/windows/: current_version.h  system_info.h  system_info.h~
common/utility/: base64.cpp  base64.h  string.cpp  timer.h  tweener.cpp  tweener.h  utf8conv_inl.h
core/: Makefile  Makefile.inc  StdAfx.cpp  configure.ac  out.txt  thumbnail_generator.cpp  video_channel.cpp  video_channel.h  video_format.cpp  video_format.h
core/consumer/: Makefile  circular.h  frame_consumer.cpp  frame_consumer.h  out.txt  output.cpp  output.h  sample.pcap
core/mixer/: out.txt  read_frame.cpp  read_frame.h  write_frame.cpp  write_frame.h
core/parameters/: parameters.cpp  parameters.h
core/producer/: frame_producer.cpp  frame_producer.cpp.bk  layer.cpp  layer.h  out.txt  stage.cpp  stage.h
dependencies/cef/: README.txt  cef_paths2.gypi
modules/bluefish/: configure.ac
modules/decklink/: configure.ac
modules/ffmpeg/: Makefile  Makefile.inc  (+5 more)
protocol/: Makefile  StdAfx.h
shell/: Makefile  Makefile.inc  main.cpp  run.sh  server.cpp  server.h
(+576 files in other folders)
